--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -48,7 +48,8 @@
         android:textAllCaps="false"
         android:layout_below="@id/enterText"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:onClick="sendTextFirebase"/>
 
     <Button
         android:id="@+id/receiveButton"
@@ -60,5 +61,6 @@
         android:textSize="30dp"
         android:textAllCaps="false"
         android:layout_below="@id/sendButton"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:onClick="receiveTextFirebase"/>
 </RelativeLayout>
